--- a/lide/tereza-starostova.html
+++ b/lide/tereza-starostova.html
@@ -52,14 +52,14 @@
     </script>
     
     <meta http-equiv="content-security-policy" content="">
-		<link href="../_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/_layout-bc1c90b5.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-24455fcc.js">
+		<link rel="modulepreload" href="../_app/immutable/start-02983181.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-a5df83c7.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-6bc0b7f3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-4b2dd576.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-07b12960.js">
@@ -155,7 +155,8 @@
         </div>
         <div class="mt-2 font-thin">Otevřená komunitní kryptoměnová konference
         </div>
-        <div class="mt-4"><a href="https://docs.utxo.cz" class="hover:text-custom-green" target="_blank" rel="noreferrer"><i class="fas fa-book"></i>  Dokumentace</a></div></div>
+        <div class="mt-4"><a href="https://docs.utxo.cz" class="hover:text-custom-green" target="_blank" rel="noreferrer"><i class="fas fa-book"></i>  Dokumentace</a>
+          <a href="utxo-obchodni-podminky.pdf" class="hover:text-custom-green ml-4" target="_blank" rel="noreferrer"><i class="fas fa-book"></i>  Obchodní podmínky</a></div></div>
       <div class="sm:mt-0 mt-6 sm:w-1/3 mr-2">
   <div class="w-auto"><div class="sm:flex flex-wrap gap-3 justify-end"><div class="mr-4 sm:mr-0 inline-block sm:block hover:text-custom-green"><a href="https://twitter.com/utxoprague" class="block flex" target="_blank" rel="noreferrer"><i class="fa-brands fa-twitter mr-2 my-auto"></i>Twitter</a>
           </div><div class="mr-4 sm:mr-0 inline-block sm:block hover:text-custom-green"><a href="https://www.instagram.com/utxoprague/" class="block flex" target="_blank" rel="noreferrer"><i class="fab fa-instagram mr-2 my-auto"></i>Instagram</a>
@@ -171,14 +172,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="z52aac">
-			import { start } from "../_app/immutable/start-24455fcc.js";
+		<script type="module" data-sveltekit-hydrate="n93mqz">
+			import { start } from "../_app/immutable/start-02983181.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="z52aac"]').parentNode,
-				version: "1684183928217",
+				target: document.querySelector('[data-sveltekit-hydrate="n93mqz"]').parentNode,
+				version: "1684348276983",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
