--- a/lide/vojtech-olbrech.html
+++ b/lide/vojtech-olbrech.html
@@ -54,26 +54,26 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-bc1c90b5.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-02983181.js">
+		<link rel="modulepreload" href="../_app/immutable/start-ef093f83.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-6bc0b7f3.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-6bac9064.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-07b12960.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-5032ad34.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-95492181.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-38c6e98c.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-9232ae66.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-ba32160c.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/lide/_slug_/_page.svelte-7e1f1688.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Link-31d24f85.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/marked.esm-0b02a870.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-616283e8.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-a73c3504.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-f7c1199f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-b40a4f3c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page-7cce44de.js"><title>Vojtěch Olbrech | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page-c94a1bb5.js"><title>Vojtěch Olbrecht | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DDCP0QYR9M"></script>
@@ -139,7 +139,7 @@
 
 </div>
       <div class="mt-4 sm:mt-0"><div class="mb-4 text-md uppercase">Přednášející</div>
-        <h1 class="text-2xl font-bold">Vojtěch Olbrech 🇨🇿</h1>
+        <h1 class="text-2xl font-bold">Vojtěch Olbrecht 🇨🇿</h1>
         
         
         <div class="mt-4 text-custom-darkpurple links"><p>Blockchain Strategist <a href="https://www.costralabs.com/" class="underline hover:no-underline" target="_blank">CostraLabs</a>, Researcher <a href="https://www.vs-prigo.cz/" class="underline hover:no-underline" target="_blank">PRIGO university</a></p></div>
@@ -172,14 +172,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="103dyep">
-			import { start } from "../_app/immutable/start-02983181.js";
+		<script type="module" data-sveltekit-hydrate="1j03091">
+			import { start } from "../_app/immutable/start-ef093f83.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="103dyep"]').parentNode,
-				version: "1684348276983",
+				target: document.querySelector('[data-sveltekit-hydrate="1j03091"]').parentNode,
+				version: "1684358707684",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
