--- a/lide/vojtech-olbrecht.html
+++ b/lide/vojtech-olbrecht.html
@@ -54,26 +54,26 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-bc1c90b5.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-ef093f83.js">
+		<link rel="modulepreload" href="../_app/immutable/start-00365a61.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-6bac9064.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-36ddbc3b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-5032ad34.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-a905d14e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-9232ae66.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-ba32160c.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-7586af5e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-a5306a3b.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/lide/_slug_/_page.svelte-7e1f1688.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Link-31d24f85.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/marked.esm-0b02a870.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-616283e8.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-f7c1199f.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-df909a6e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-b40a4f3c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page-c94a1bb5.js"><title>Vojtěch Olbrecht | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page-046a3fe3.js"><title>Vojtěch Olbrecht | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DDCP0QYR9M"></script>
@@ -125,8 +125,8 @@
 <section class="relative mx-auto py-6 sm:py-10 px-6 max-w-7xl text-custom-darkpurple"><div class="mb-6 uppercase text-gray-500"><a href="/"><i class="fa-solid fa-arrow-left"></i> Zpět</a></div>
     <div class="sm:flex gap-10 mt-4"><div>
 
-<div class="w-64 h-64 text-center pb-4 m-auto"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/vojtech-olbrech-web.jpg)"></div>
-        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/vojtech-olbrech-twitter.jpg)"></div></div></div></div>
+<div class="w-64 h-64 text-center pb-4 m-auto"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/vojtech-olbrecht-web.jpg)"></div>
+        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/vojtech-olbrecht-twitter.jpg)"></div></div></div></div>
 
 
 
@@ -172,14 +172,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1j03091">
-			import { start } from "../_app/immutable/start-ef093f83.js";
+		<script type="module" data-sveltekit-hydrate="fii6d">
+			import { start } from "../_app/immutable/start-00365a61.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1j03091"]').parentNode,
-				version: "1684358707684",
+				target: document.querySelector('[data-sveltekit-hydrate="fii6d"]').parentNode,
+				version: "1684360285445",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
