deploy: 14357ac0ed57de3dc5cfa9356ae344736586c256

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-olbrecht-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Olbrecht"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/antonin-jilek-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Antonín Jílek"></div>
 
 
 
@@ -441,7 +441,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
 
 
 
@@ -467,7 +467,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/milan-marcak-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Milan Marcak"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
 
 
 
@@ -480,124 +480,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dalibor-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dalibor Černý"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/anna-pichova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Anna Píchová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/damsky-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="damsky"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ivo-cechman-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ivo Čechman"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-kracik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Kracík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dominika-v-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dominika V"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/pablo-cz-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="PabloCZ"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-olbrecht-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Olbrecht"></div>
 
 
 
@@ -623,7 +506,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jana-kubatova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jana Kubátová"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dalibor-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dalibor Černý"></div>
 
 
 
@@ -636,20 +519,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/samuela-davidova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Samuela Davidova"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-etheri-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Tereza"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
 
 
 
@@ -675,7 +545,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-pilny-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Pilný"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/anna-pichova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Anna Píchová"></div>
 
 
 
@@ -688,7 +558,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
 
 
 
@@ -701,7 +571,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
 
 
 
@@ -714,20 +584,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/lc-young-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="LC Young"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
 
 
 
@@ -753,6 +610,19 @@
 
 
 
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-matejka-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Martin Matejka"></div>
 
 
@@ -766,7 +636,137 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/antonin-jilek-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Antonín Jílek"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jana-kubatova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jana Kubátová"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/bihanojko-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Nikola"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/sodomak-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Milan Půlkrábek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/milan-marcak-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Milan Marcak"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/pablo-cz-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="PabloCZ"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/samuela-davidova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Samuela Davidova"></div>
 
 
 
@@ -1108,14 +1108,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1rk4rco">
+		<script type="module" data-sveltekit-hydrate="192tcyw">
 			import { start } from "./_app/immutable/start-351e3afe.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1rk4rco"]').parentNode,
-				version: "1684612601976",
+				target: document.querySelector('[data-sveltekit-hydrate="192tcyw"]').parentNode,
+				version: "1684612716574",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
